--- a/templates/trips/trip_days.html
+++ b/templates/trips/trip_days.html
@@ -6,7 +6,7 @@
     <div class="section-body">
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb bg-primary text-white-all">
-            <li class="breadcrumb-item"><a href="#"></i> Asosiy</a></li>
+            <li class="breadcrumb-item"><a href="{% url 'list_page' %}"></i> Asosiy</a></li>
             <li class="breadcrumb-item"><a href="{% url 'trip_detail' trip.uuid %}"> Sayohat kunlari ro'yxati</a></li>
             <li class="breadcrumb-item">Sayohat kuni</li>
           </ol>
