--- a/templates/Instructions/list.html
+++ b/templates/Instructions/list.html
@@ -6,7 +6,7 @@
     <div class="section-body">
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb bg-primary text-white-all">
-            <li class="breadcrumb-item"><a href="#"></i> Asosiy</a></li>
+            <li class="breadcrumb-item"><a href="{% url 'list_page' %}"></i> Asosiy</a></li>
             <li class="breadcrumb-item"><a href="{% url 'list_page' %}"> Korsatma ro'yxati</a></li>
           </ol>
         </nav>
