--- a/templates/about/about.html
+++ b/templates/about/about.html
@@ -7,7 +7,7 @@
     <div class="section-body">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb bg-primary text-white-all">
-                <li class="breadcrumb-item"><a href="#">Asosiy</a></li>
+                <li class="breadcrumb-item"><a href="{% url 'list_page' %}"></i> Asosiy</a></li>
                 <li class="breadcrumb-item"><a href="{% url 'about' %}">Kompaniya haqida</a></li>
             </ol>
         </nav>
