--- a/templates/banner/List.html
+++ b/templates/banner/List.html
@@ -14,7 +14,7 @@
     <div class="section-body">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb bg-primary text-white-all">
-                <li class="breadcrumb-item"><a href="#">Asosiy</a></li>
+                <li class="breadcrumb-item"><a href="{% url 'list_page' %}"></i> Asosiy</a></li>
                 <li class="breadcrumb-item"><a href="{% url 'banner_list' %}">Bannerlar ro'yxati</a></li>
             </ol>
         </nav>
