--- a/templates/banner/detail.html
+++ b/templates/banner/detail.html
@@ -6,7 +6,7 @@
     <div class="section-body">
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb bg-primary text-white-all">
-            <li class="breadcrumb-item"><a href="#">Asosiy</a></li>
+            <li class="breadcrumb-item"><a href="{% url 'list_page' %}"></i> Asosiy</a></li>
             <li class="breadcrumb-item"><a href="{% url 'banner_list' %}">Banner ro'yxati</a></li>
             <li class="breadcrumb-item">Banner</li>
           </ol>
