--- a/templates/base.html
+++ b/templates/base.html
@@ -63,13 +63,13 @@
       <div class="main-sidebar sidebar-style-2">
         <aside id="sidebar-wrapper">
           <div class="sidebar-brand">
-            <a href="index.html"> <img alt="image" src="{% static 'Stanlogo.png' %}" class="header-logo" /> <span
+            <a href="#"> <img alt="image" src="{% static 'Stanlogo.png' %}" class="header-logo" /> <span
                 class="logo-name"></span>
             </a>
           </div>
           <ul class="sidebar-menu">
             <li class="dropdown active">
-              <a href="index.html" class="nav-link"><i data-feather="monitor"></i><span>Dashboard</span></a>
+              <a href="{% url 'list_page' %}" class="nav-link"><i data-feather="monitor"></i><span>Dashboard</span></a>
             </li>
             <li class="dropdown">
               <a href="{% url 'social' %}" class="nav-link">
@@ -77,7 +77,7 @@
               </a>
             </li>
             <li class="dropdown">
-              <a href="{% url 'company_info' %}" class="nav-link">
+              <a href="{% url 'company_info' %}" class="nav-link">  
                 <i data-feather="phone"></i><span>Bog'lanish</span>
               </a>
             </li>
@@ -114,7 +114,7 @@
               </a>
             </li>
             <li class="dropdown">
-              <a href="#" class="nav-link">
+              <a href="{% url 'blog_list' %}" class="nav-link">
                 <i data-feather="file-text"></i><span>Blog</span>
               </a>
             </li>
@@ -149,7 +149,7 @@
               </a>
             </li>
             <li class="dropdown">
-              <a href="#" class="nav-link">
+              <a href="{% url 'contact_list' %}" class="nav-link">
                 <i data-feather="user"></i><span>Kontaktlar</span>
               </a>
             </li>
@@ -167,13 +167,13 @@
         
         {% endblock content %}
       </div>
-      <footer class="main-footer" >
+      <footer class="main-footer" style="position: fixed; z-index: 100; bottom: 0; width: 100%;">
         <div class="footer-left">
           <a href="https://novacode.uz" target="_blank" style="color: #A9BF04; font-size: 18px; text-decoration: none;"><strong>Nova Code</strong></a>
         </div>
         <div class="footer-right">
         </div>
-      </footer>
+    </footer>
     </div>
   </div>
 
