--- a/templates/comment/detail.html
+++ b/templates/comment/detail.html
@@ -6,7 +6,7 @@
     <div class="section-body">
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb bg-primary text-white-all">
-            <li class="breadcrumb-item"><a href="#"></i> Asosiy</a></li>
+            <li class="breadcrumb-item"><a href="{% url 'list_page' %}"></i> Asosiy</a></li>
             <li class="breadcrumb-item"><a href="{% url 'comment_list' %}"> Izoxlar ro'yxati</a></li>
             <li class="breadcrumb-item">Izox</li>
           </ol>
