--- a/templates/countries/location_detail.html
+++ b/templates/countries/location_detail.html
@@ -6,7 +6,7 @@
     <div class="section-body">
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb bg-primary text-white-all">
-            <li class="breadcrumb-item"><a href="#"></i> Asosiy</a></li>
+            <li class="breadcrumb-item"><a href="{% url 'list_page' %}"></i> Asosiy</a></li>
             <li class="breadcrumb-item"><a href="{% url 'country_detail' locations.country.uuid  %}">Joylashuvlar ro'yxati</a></li>
             <li class="breadcrumb-item">Joylashuv</li>
           </ol>
