--- a/templates/list_page.html
+++ b/templates/list_page.html
@@ -4,142 +4,168 @@
 
 <section class="section">
     <div class="section-body">
-        <nav aria-label="breadcrumb">
+      <nav aria-label="breadcrumb">
           <ol class="breadcrumb bg-primary text-white-all">
-            <li class="breadcrumb-item"><a href="#"></i> Asosiy</a></li>
-            <li class="breadcrumb-item"><a href="#"> (model nomi) ro'yxati</a></li>
+            <li class="breadcrumb-item"><a href="{% url 'list_page' %}"></i> Asosiy</a></li>
           </ol>
         </nav>
         <div class="card">
-            <div class="card-header">
-                <h4>(Model nomi) ro'yxati</h4>
-                <div class="card-header-action">
-                <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#basicModal">
-                    <i class="ion-plus"></i> Yaratish
-                </a>
+            <div class="card-body text-center">
+              <div class="row">
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="card ">
+                      <div class="card-body">
+                        <a href="{% url 'social' %}" style="font-size: 1.6rem; color:rgb(133, 93, 245);">
+                          <i data-feather="share-2"></i><span> Ijtimoiy tarmoqlar</span>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="card ">
+                      <div class="card-body">
+                        <a href="{% url 'company_info' %}" style="font-size: 1.6rem; color:rgb(133, 93, 245);">
+                          <i data-feather="phone"></i><span> Bog'lanish</span>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="card ">
+                      <div class="card-body">
+                        <a href="{% url 'about' %}" style="font-size: 1.6rem; color:rgb(133, 93, 245);">
+                          <i data-feather="info"></i><span> Biz haqimizda</span>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="card ">
+                      <div class="card-body">
+                        <a href="{% url 'whyus' %}" style="font-size: 1.6rem; color:rgb(133, 93, 245);">
+                          <i data-feather="check-circle"></i><span> Nima uchun biz</span>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="card ">
+                      <div class="card-body">
+                        <a href="{% url 'banner_list' %}" style="font-size: 1.6rem; color:rgb(133, 93, 245);">
+                          <i data-feather="image"></i><span> Banner</span>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="card ">
+                      <div class="card-body">
+                        <a href="{% url 'gallery_list' %}" style="font-size: 1.6rem; color:rgb(133, 93, 245);">
+                          <i data-feather="grid"></i><span> Galereya</span>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="card ">
+                      <div class="card-body">
+                        <a href="{% url 'ourmission_list' %}" style="font-size: 1.6rem; color:rgb(133, 93, 245);">
+                          <i data-feather="target"></i><span> Bizning missiyamiz</span>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="card ">
+                      <div class="card-body">
+                        <a href="{% url 'instructions_list' %}" style="font-size: 1.6rem; color:rgb(133, 93, 245);">
+                          <i data-feather="book"></i><span> Ko'rsatmalar</span>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="card ">
+                      <div class="card-body">
+                        <a href="{% url 'blog_list' %}" style="font-size: 1.6rem; color:rgb(133, 93, 245);">
+                          <i data-feather="file-text"></i><span> Blog</span>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="card ">
+                      <div class="card-body">
+                        <a href="{% url 'comment_list' %}" style="font-size: 1.6rem; color:rgb(133, 93, 245);">
+                          <i data-feather="message-circle"></i><span> Izohlar</span>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="card ">
+                      <div class="card-body">
+                        <a href="#" style="font-size: 1.6rem; color:rgb(133, 93, 245);">
+                          <i data-feather="heart"></i><span> An'analar</span>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="card ">
+                      <div class="card-body">
+                        <a href="{% url 'testimionals_list' %}" style="font-size: 1.6rem; color:rgb(133, 93, 245);">
+                          <i data-feather="star"></i><span> Mijozlar fikri</span>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="card ">
+                      <div class="card-body">
+                        <a href="{% url 'country_list' %}" style="font-size: 1.6rem; color:rgb(133, 93, 245);">
+                          <i data-feather="globe"></i><span> Davlatlar</span>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="card ">
+                      <div class="card-body">
+                        <a href="{% url 'trip_list' %}" style="font-size: 1.6rem; color:rgb(133, 93, 245);">
+                          <i data-feather="map"></i><span> Sayohatlar</span>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="card ">
+                      <div class="card-body">
+                        <a href="{% url 'trip_order_list' %}" style="font-size: 1.6rem; color:rgb(133, 93, 245);">
+                          <i data-feather="shopping-cart"></i><span> Sayohat buyurtmalari</span>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="card ">
+                      <div class="card-body">
+                        <a href="{% url 'contact_list' %}" style="font-size: 1.6rem; color:rgb(133, 93, 245);">
+                          <i data-feather="user"></i><span> Kontaktlar</span>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
                 </div>
             </div>
-            <div class="card-body">
-              <table class="table table-hover">
-                <thead>
-                  <tr>
-                    <th>#</th>
-                    <th class="text-center">Rasm</th>
-                    <th class="text-center">Inglizcha nomi</th>
-                    <th class="text-center">Inglizcha subtitr</th>
-                    <th class="text-center">Harakatlar</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <th scope="row">1</th>
-                    <td class="text-center"><img src="{% static 'pexels-photo-12407395.jpeg' %}" width="60px" height="30px" alt="rasm"></td>
-                    <td class="text-center">Otto</td>
-                    <td class="text-center">@mdo</td>
-                    <td class="text-center">
-                        <a href="{% url 'detail_page' %}" class="btn btn-warning"><i class="ion-android-create"></i></a>
-                        <a href="#" class="btn btn-danger" data-toggle="modal" data-target="#deleteModal"><i class="ion-android-delete"></i></a>
-                    </td>
-                  </tr>
-                  <tr>
-                    <th scope="row">1</th>
-                    <td class="text-center"><img src="{% static 'pexels-photo-12407395.jpeg' %}" width="60px" height="30px" alt="rasm"></td>
-                    <td class="text-center">Otto</td>
-                    <td class="text-center">@mdo</td>
-                    <td class="text-center">
-                        <a href="{% url 'detail_page' %}" class="btn btn-warning"><i class="ion-android-create"></i></a>
-                        <a href="#" class="btn btn-danger" data-toggle="modal" data-target="#deleteModal"><i class="ion-android-delete"></i></a>
-                    </td>
-                  </tr>
-                  <tr>
-                    <th scope="row">1</th>
-                    <td class="text-center"><img src="{% static 'pexels-photo-12407395.jpeg' %}" width="60px" height="30px" alt="rasm"></td>
-                    <td class="text-center">Otto</td>
-                    <td class="text-center">@mdo</td>
-                    <td class="text-center">
-                        <a href="{% url 'detail_page' %}" class="btn btn-warning"><i class="ion-android-create"></i></a>
-                        <a href="#" class="btn btn-danger" data-toggle="modal" data-target="#deleteModal"><i class="ion-android-delete"></i></a>
-                    </td>
-                  </tr>
-                  <tr>
-                    <th scope="row">1</th>
-                    <td class="text-center"><img src="{% static 'pexels-photo-12407395.jpeg' %}" width="60px" height="30px" alt="rasm"></td>
-                    <td class="text-center">Otto</td>
-                    <td class="text-center">@mdo</td>
-                    <td class="text-center">
-                        <a href="{% url 'detail_page' %}" class="btn btn-warning"><i class="ion-android-create"></i></a>
-                        <a href="#" class="btn btn-danger" data-toggle="modal" data-target="#deleteModal"><i class="ion-android-delete"></i></a>
-                    </td>
-                  </tr>
-                  <tr>
-                    <th scope="row">1</th>
-                    <td class="text-center"><img src="{% static 'pexels-photo-12407395.jpeg' %}" width="60px" height="30px" alt="rasm"></td>
-                    <td class="text-center">Otto</td>
-                    <td class="text-center">@mdo</td>
-                    <td class="text-center">
-                        <a href="{% url 'detail_page' %}" class="btn btn-warning"><i class="ion-android-create"></i></a>
-                        <a href="#" class="btn btn-danger" data-toggle="modal" data-target="#deleteModal"><i class="ion-android-delete"></i></a>
-                    </td>
-                  </tr>
-                </tbody>
-            </table>
-          </div>
         </div>
     </div>
 </section>
 
-
-<div class="modal fade" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">(model nomi) yaratish</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <div class="form-group">
-          <label>Image</label>
-          <input type="file" class="form-control">
-        </div>
-        <div class="form-group">
-          <label>Inglizcha nom</label>
-          <input type="text" class="form-control">
-        </div>
-        <div class="form-group">
-            <label>Inglizcha tavsifi</label>
-            <textarea class="summernote"></textarea>
-        </div>
-      </div>
-      <div class="modal-footer bg-whitesmoke br">
-        <button type="button" class="btn btn-primary"><i class="ion-plus"></i> Yaratish</button>
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Yopish</button>
-      </div>
-    </div>
-  </div>
-</div>
+   
 
 
-<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">(model nomi)</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <h5>(model title en) o'chirilsinmi</h5>
-      </div>
-      <div class="modal-footer bg-whitesmoke br">
-        <button type="button" class="btn btn-danger"><i class="ion-android-delete"></i> O'chirish</button>
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Yopish</button>
-      </div>
-    </div>
-  </div>
-</div>
 
 
 {% endblock content %}
