--- a/templates/our_missions/list.html
+++ b/templates/our_missions/list.html
@@ -6,7 +6,7 @@
     <div class="section-body">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb bg-primary text-white-all">
-                <li class="breadcrumb-item"><a href="#">Asosiy</a></li>
+                <li class="breadcrumb-item"><a href="{% url 'list_page' %}"></i> Asosiy</a></li>
                 <li class="breadcrumb-item"><a href="{% url 'ourmission_list' %}">Bizning vazifalar ro'yxati</a></li>
             </ol>
         </nav>
