--- a/templates/trips/detail.html
+++ b/templates/trips/detail.html
@@ -7,7 +7,7 @@
         <!-- Breadcrumb -->
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb bg-primary text-white-all">
-                <li class="breadcrumb-item"><a href="#">Asosiy</a></li>
+                <li class="breadcrumb-item"><a href="{% url 'list_page' %}"></i> Asosiy</a></li>
                 <li class="breadcrumb-item"><a href="{% url 'trip_list' %}">Sayohatlar ro'yxati</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Sayohat</li>
             </ol>
