--- a/templates/base.html
+++ b/templates/base.html
@@ -149,7 +149,7 @@
               </a>
             </li>
             <li class="dropdown">
-              <a href="#" class="nav-link">
+              <a href="{% url 'contact_list' %}" class="nav-link">
                 <i data-feather="user"></i><span>Kontaktlar</span>
               </a>
             </li>
