--- a/templates/about/about.html
+++ b/templates/about/about.html
@@ -53,8 +53,8 @@
                                 <input type="text" class="form-control" name="title_es" value="{{ about.title_es }}">
                             </div>
                             <div class="form-group col-6">
-                                <label>Yaratilgan sana</label>
-                                <input type="text" class="form-control" value="{{ about.created_at|date:'Y-m-d H:i' }}" readonly>
+                                <label>Tahrirlangan sana</label>
+                                <input type="text" class="form-control" value="{{ about.updated_at|date:'Y-m-d H:i' }}" readonly>
                             </div>
                             <div class="form-group col-6">
                                 <label>Inglizcha tavsifi</label>
