--- a/templates/social_contact_info/social.html
+++ b/templates/social_contact_info/social.html
@@ -29,7 +29,7 @@
                            
                             <div class="form-group col-6">
                                 <label>Instagram</label>
-                                <input type="text" class="form-control" name="Instagram" value="{{ social.instagram }}" required>
+                                <input type="text" class="form-control" name="instagram" value="{{ social.instagram }}" required>
                             </div>
                             <div class="form-group col-6">
                                 <label>Telegram</label>
