--- a/templates/testimionals/detail.html
+++ b/templates/testimionals/detail.html
@@ -24,8 +24,8 @@
                             <input type="text" class="form-control" value="{{testimional.author}}" name="author">
                         </div>
                         <div class="form-group col-6">
-                            <label>Yaratilgan sana</label>
-                            <input type="text" class="form-control" value="{{testimional.created_at | date:'Y-m-d'}}" name="created_at" readonly>
+                            <label>Tahrirlangan sana</label>
+                            <input type="text" class="form-control" value="{{testimional.updated_at |date:'Y-m-d H:i'}}" name="updated_at" readonly>
                         </div>
                         <div class="form-group col-6">
                             <label>Inglizcha tavsifi</label>
