--- a/templates/trips/service_detail.html
+++ b/templates/trips/service_detail.html
@@ -47,8 +47,8 @@
                             <input type="text" class="form-control" value="{{service.title_es}}" name="title_es">
                         </div>
                         <div class="form-group col-6">
-                            <label>Yaratilgan sana</label>
-                            <input type="text" class="form-control" value="{{service.created_at |date:'Y-m-d'}}" name="created_at">
+                            <label>Tahrirlangan sana</label>
+                            <input type="text" class="form-control" value="{{service.updated_at |date:'Y-m-d H:i'}}" name="updated_at">
                         </div>
                         <div class="form-group col-6">
                             <label>Inglizcha tavsifi</label>
