--- a/templates/Instructions/list.html
+++ b/templates/Instructions/list.html
@@ -14,7 +14,7 @@
             <div class="card-header">
                 <h4>Korsatmalar ro'yxati</h4>
                 <div class="card-header-action">
-                <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#basicModal">
+                <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#createModal">
                     <i class="ion-plus"></i> Yaratish
                 </a>
                 </div>
@@ -57,7 +57,7 @@
 </section>
 
 
-<div class="modal fade" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="createModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -70,7 +70,7 @@
         {% csrf_token %}
           <div class="modal-body">
             <div class="form-group">
-              <label>Image</label>
+              <label>Rasm</label>
               <input type="file" class="form-control" name="image" required>
             </div>
             <div class="form-group">
