--- a/templates/banner/List.html
+++ b/templates/banner/List.html
@@ -22,7 +22,7 @@
             <div class="card-header">
                 <h4>Banner ro'yxati</h4>
                 <div class="card-header-action">
-                    <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#basicModal">
+                    <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#createModal">
                         <i class="ion-plus"></i> Yaratish
                     </a>
                 </div>
@@ -64,7 +64,7 @@
 </section>
 
 <!-- Create Modal -->
-<div class="modal fade" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="createModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <form action="{% url 'banner_create' %}" method="post" enctype="multipart/form-data">
             {% csrf_token %}
@@ -77,7 +77,7 @@
                 </div>
                 <div class="modal-body">
                     <div class="form-group">
-                        <label>Image</label>
+                        <label>Rasm</label>
                         <input type="file" class="form-control" required name="image">
                     </div>
                     <div class="form-group">
