--- a/templates/blog/detail.html
+++ b/templates/blog/detail.html
@@ -48,8 +48,8 @@
                             <input type="text" class="form-control" value="{{blog.title_es}}" name="title_es">
                         </div>
                         <div class="form-group col-6">
-                            <label>Yaratilgan sana</label>
-                            <input type="text" class="form-control" value="{{blog.created_at}}" readonly>
+                            <label>Tahrirlangan sana</label>
+                            <input type="text" class="form-control" value="{{blog.updated_at|date:'Y-m-d H:i'}}" readonly>
                         </div>
                         <div class="form-group col-6">
                             <label>Inglizcha tavsifi</label>
