--- a/templates/comment/detail.html
+++ b/templates/comment/detail.html
@@ -31,8 +31,8 @@
                             <input type="text" class="form-control" value="{{comment.fullname}}" name='fullname'>
                         </div>
                         <div class="form-group col-6">
-                            <label>Yaratilgan sana</label>
-                            <input type="text" class="form-control" value="{{comment.created_at | date:'Y-m-d'}}" readonly>
+                            <label>Tahrirlangan sana</label>
+                            <input type="text" class="form-control" value="{{comment.updated_at|date:'Y-m-d H:i'}}" readonly>
                         </div>
                         <div class="form-group col-12">
                             <label>Izox</label>
