--- a/templates/comment/list.html
+++ b/templates/comment/list.html
@@ -20,7 +20,7 @@
             <div class="card-header">
                 <h4>Izoxlar ro'yxati</h4>
                 <div class="card-header-action">
-                <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#basicModal">
+                <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#createModal">
                     <i class="ion-plus"></i> Yaratish
                 </a>
                 </div>
@@ -66,7 +66,7 @@
 </section>
 
 
-<div class="modal fade" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="createModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <form action="{% url 'comment_create' %}" method="post" enctype="multipart/form-data">
         {% csrf_token %}
@@ -79,7 +79,7 @@
           </div>
           <div class="modal-body">
             <div class="form-group">
-              <label>Image</label>
+              <label>Rasm</label>
               <input type="file" class="form-control" name="image" required>
             </div>
             <div class="form-group">
