--- a/templates/countries/detail.html
+++ b/templates/countries/detail.html
@@ -47,8 +47,8 @@
                             <input type="text" class="form-control" value="{{country.title_es}}" name="title_es">
                         </div>
                         <div class="form-group col-6">
-                            <label>Yaratilgan sana</label>
-                            <input type="text" class="form-control" value="{{country.created_at | date:'Y-m-d'}}" name="created_at" readonly>
+                            <label>Tahrirlangan sana</label>
+                            <input type="text" class="form-control" value="{{country.updated_at |date:'Y-m-d H:i'}}" name="updated_at" readonly>
                         </div>
                         <div class="form-group col-6">
                             <label>Inglizcha tavsifi</label>
@@ -137,7 +137,7 @@
             {% csrf_token %}
             <div class="modal-body">
                 <div class="form-group">
-                  <label>Image</label>
+                  <label>Rasm</label>
                   <input type="file" class="form-control" name="image">
                 </div>
                 <div class="form-group">
