--- a/templates/countries/list.html
+++ b/templates/countries/list.html
@@ -72,7 +72,7 @@
         </div>
         <div class="modal-body">
           <div class="form-group">
-            <label>Image</label>
+            <label>Rasm</label>
             <input type="file" class="form-control" name="image" required>
           </div>
           <div class="form-group">
