--- a/templates/main.html
+++ b/templates/main.html
@@ -11,8 +11,7 @@
         </nav>
         <div class="card">
             <div class="card-body text-center">
-              <div class="row">
-                <div class="row">
+                <div class="row" style="text-align: center;">
                   <div class="col-md-6">
                     <div class="card ">
                       <div class="card-body">
@@ -71,7 +70,7 @@
                     <div class="card ">
                       <div class="card-body">
                         <a href="{% url 'ourmission_list' %}" style="font-size: 1.6rem; color:rgb(133, 93, 245);">
-                          <i data-feather="target"></i><span> Bizning missiyamiz</span>
+                          <i data-feather="target"></i><span> Bizning vazifalar</span>
                         </a>
                       </div>
                     </div>
@@ -157,7 +156,6 @@
                       </div>
                     </div>
                   </div>
-                </div>
             </div>
         </div>
     </div>
