--- a/templates/our_missions/detail.html
+++ b/templates/our_missions/detail.html
@@ -47,8 +47,8 @@
                         <input type="text" class="form-control" value="{{our_mission.title_es}}" name="title_es">
                     </div>
                     <div class="form-group col-6">
-                        <label>Yaratilgan sana</label>
-                        <input type="text" class="form-control" value="{{our_mission.created_at}}" readonly>
+                        <label>Tahrirlangan sana</label>
+                        <input type="text" class="form-control" value="{{our_mission.updated_at|date:'Y-m-d H:i'}}" readonly>
                     </div>
                     <div class="form-group col-6">
                         <label>Inglizcha tavsifi</label>
