--- a/templates/our_missions/list.html
+++ b/templates/our_missions/list.html
@@ -14,7 +14,7 @@
             <div class="card-header">
                 <h4>Bizning vazifalar ro'yxati</h4>
                 <div class="card-header-action">
-                    <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#basicModal">
+                    <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#createModal">
                         <i class="ion-plus"></i> Yaratish
                     </a>
                 </div>
@@ -56,7 +56,7 @@
 </section>
 
 <!-- Create Modal -->
-<div class="modal fade" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="createModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <form action="{% url 'ourmission_create' %}" method="post" enctype="multipart/form-data">
             {% csrf_token %}
