--- a/templates/testimionals/list.html
+++ b/templates/testimionals/list.html
@@ -14,7 +14,7 @@
             <div class="card-header">
                 <h4>Fikrlar ro'yxati</h4>
                 <div class="card-header-action">
-                <a href="" class="btn btn-primary" data-toggle="modal" data-target="#basicModal">
+                <a href="" class="btn btn-primary" data-toggle="modal" data-target="#createModal">
                     <i class="ion-plus"></i> Yaratish
                 </a>
                 </div>
@@ -54,7 +54,7 @@
 </section>
 
 
-<div class="modal fade" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="createModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <form action="{% url 'testimionals_create' %}" method="post" enctype="multipart/form-data">
         {% csrf_token %}
