--- a/templates/trips/detail.html
+++ b/templates/trips/detail.html
@@ -54,8 +54,8 @@
                             <input type="text" class="form-control" value="{{ trip.title_es }}" name="title_es">
                         </div>
                         <div class="form-group col-6">
-                            <label>Yaratilgan sana</label>
-                            <input type="text" class="form-control" value="{{ trip.created_at | date:'Y-m-d' }}" readonly>
+                            <label>Tahrirlangan sana</label>
+                            <input type="text" class="form-control" value="{{ trip.updated_at |date:'Y-m-d H:i' }}" readonly>
                         </div>
                         <div class="form-group col-6">
                             <label>Inglizcha tavsifi</label>
@@ -122,7 +122,7 @@
                        <tr>
                            <th class="text-center">#</th>
                            <th class="text-center">Inglizcha nomi</th>
-                           <th class="text-center">Yaratilgan sana</th>
+                           <th class="text-center">Tahrirlangan sana</th>
                            <th class="text-center">Harakatlar</th>
                        </tr>
                    </thead>
@@ -131,7 +131,7 @@
                        <tr>
                            <td class="text-center">{{ forloop.counter }}</td>
                            <td class="text-center">{{ day.title_en }}</td>
-                           <td class="text-center">{{ day.created_at |date:'Y-m-d' }}</td>
+                           <td class="text-center">{{ day.updated_at |date:'Y-m-d H:i' }}</td>
                            <td class="text-center">
                                <a href="{% url 'trip_days_detail' day.uuid %}" class="btn btn-warning"><i class="ion-android-create"></i></a>
                                <a href='#' class="btn btn-danger" data-toggle="modal" data-target="#deleteDayModal-{{ day.uuid }}"><i class="ion-android-delete"></i></a>
@@ -259,7 +259,7 @@
                   </div>
                   <div class="modal-body">
                     <div class="form-group">
-                        <label>Image</label>
+                        <label>Rasm</label>
                         <input type="file" class="form-control" name="image" required>
                       </div>
                     <div class="form-group">
