--- a/templates/trips/list.html
+++ b/templates/trips/list.html
@@ -80,7 +80,7 @@
         </div>
         <div class="modal-body">
           <div class="form-group">
-            <label>Image</label>
+            <label>Rasm</label>
             <input type="file" class="form-control" name="image" required>
           </div>
           <div class="form-group">
