--- a/templates/trips/trip_days.html
+++ b/templates/trips/trip_days.html
@@ -40,8 +40,8 @@
                             <input type="text" class="form-control" value="{{trip_days.title_es}}" name="title_es">
                         </div>
                         <div class="form-group col-6">
-                            <label>Yaratilgan sana</label>
-                            <input type="text" class="form-control" value="{{trip_days.created_at | date:'Y-m-d' }}" name="created_at" readonly>
+                            <label>Tahrirlangan sana</label>
+                            <input type="text" class="form-control" value="{{trip_days.updated_at |date:'Y-m-d H:i' }}" name="updated_at" readonly>
                         </div>
                         <div class="form-group col-6">
                             <label>Inglizcha tavsifi</label>
