--- a/templates/main.html
+++ b/templates/main.html
@@ -105,7 +105,7 @@
                   <div class="col-md-6">
                     <div class="card ">
                       <div class="card-body">
-                        <a href="#" style="font-size: 1.6rem; color:rgb(133, 93, 245);">
+                        <a href="{% url 'tradition_list' %}" style="font-size: 1.6rem; color:rgb(133, 93, 245);">
                           <i data-feather="heart"></i><span> An'analar</span>
                         </a>
                       </div>
