--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,15 @@
       width: 60px !important;
       height: 40px !important ;
     }
+    .card-body img{
+            height: auto; /* Konteyner balandligi */
+            width: 50%; /* Konteyner kengligi */
+            overflow: hidden; /* Tashqariga chiqadigan qismlarni yashirish */
+            border-radius: 5px; /* Yumaloq burchaklar */
+            display: flex; /* Rasmni o'rtaga joylash uchun flex qo'shamiz */
+            justify-content: center; /* Gorizontal markazlashtirish */
+            align-items: center; /* Vertikal markazlashtirish */
+    }
   </style>
 
 </head>
