--- a/templates/our_missions/list.html
+++ b/templates/our_missions/list.html
@@ -78,7 +78,7 @@
                     </div>
                     <div class="form-group">
                         <label>Inglizcha tavsifi</label>
-                        <textarea class="summernote" name="content_en"></textarea>
+                        <textarea class="summernote" name="description_en"></textarea>
                     </div>
                 </div>
                 <div class="modal-footer">
