--- a/templates/Traditions/detail.html
+++ b/templates/Traditions/detail.html
@@ -22,66 +22,66 @@
 
                     <div class="row mb-4">
                         
-                        <div class="form-group col-6">
+                        <div class="form-group col-md-6">
                             <label>Inglizcha nomi</label>
                             <input type="text" class="form-control" value="{{ tradition.title_en }}" name="title_en">
                         </div>
-                        <div class="form-group col-6">
+                        <div class="form-group col-md-6">
                             <label>Ruscha nomi</label>
                             <input type="text" class="form-control" value="{{ tradition.title_ru }}" name="title_ru">
                         </div>
-                        <div class="form-group col-6">
+                        <div class="form-group col-md-6">
                             <label>Fransuzcha nomi</label>
                             <input type="text" class="form-control" value="{{ tradition.title_fr }}" name="title_fr">
                         </div>
-                        <div class="form-group col-6">
+                        <div class="form-group col-md-6">
                             <label>Nemischa nomi</label>
                             <input type="text" class="form-control" value="{{ tradition.title_de }}" name="title_de">
                         </div>
-                        <div class="form-group col-6">
+                        <div class="form-group col-md-6">
                             <label>Ispancha nomi</label>
                             <input type="text" class="form-control" value="{{ tradition.title_es }}" name="title_es">
                         </div>
 
 
-                        <div class="form-group col-6">
+                        <div class="form-group col-md-6">
                             <label>Inglizcha subtitri</label>
                             <input type="text" class="form-control" value="{{ tradition.title_en }}" name="subtitle_en">
                         </div>
-                        <div class="form-group col-6">
+                        <div class="form-group col-md-6">
                             <label>Ruscha subtitri</label>
                             <input type="text" class="form-control" value="{{ tradition.title_ru }}" name="subtitle_ru">
                         </div>
-                        <div class="form-group col-6">
+                        <div class="form-group col-md-6">
                             <label>Fransuzcha subtitri</label>
                             <input type="text" class="form-control" value="{{ tradition.title_fr }}" name="subtitle_fr">
                         </div>
-                        <div class="form-group col-6">
+                        <div class="form-group col-md-6">
                             <label>Nemischa subtitri</label>
                             <input type="text" class="form-control" value="{{ tradition.title_de }}" name="subtitle_de">
                         </div>
-                        <div class="form-group col-6">
+                        <div class="form-group col-md-6">
                             <label>Ispancha subtitri</label>
                             <input type="text" class="form-control" value="{{ tradition.title_es }}" name="subtitle_es">
                         </div>
 
-                        <div class="form-group col-6">
+                        <div class="form-group col-md-6">
                             <label>Inglizcha tavsifi</label>
                             <textarea class="summernote" name="content_en">{{tradition.content_en}}</textarea >
                         </div>
-                        <div class="form-group col-6">
+                        <div class="form-group col-md-6">
                             <label>Ruscha tavsifi</label>
                             <textarea class="summernote" name="content_ru">{{tradition.content_ru}}</textarea >
                         </div>
-                        <div class="form-group col-6">
+                        <div class="form-group col-md-6">
                             <label>Fransuzcha tavsifi</label>
                             <textarea class="summernote" name="content_fr">{{tradition.content_fr}}</textarea >
                         </div>
-                        <div class="form-group col-6">
+                        <div class="form-group col-md-6">
                             <label>Nemischa tavsifi</label>
                             <textarea class="summernote" name="content_de">{{tradition.content_de}}</textarea >
                         </div>
-                        <div class="form-group col-12">
+                        <div class="form-group col-md-12">
                             <label>Ispancha tavsifi</label>
                             <textarea class="summernote" name="content_es">{{tradition.content_es}}</textarea >
                         </div>
