--- a/templates/blog/detail.html
+++ b/templates/blog/detail.html
@@ -23,51 +23,51 @@
                     {% csrf_token %}
 
                     <div class="row mb-4">
-                        <div class="form-group col-12">
+                        <div class="form-group col-md-12">
                             <label>Rasm</label>
                             <input type="file" class="form-control" name="image">
                         </div>
-                        <div class="form-group col-6">
+                        <div class="form-group col-md-6">
                             <label>Inglizcha nomi</label>
                             <input type="text" class="form-control" value="{{blog.title_en}}" name="title_en">
                         </div>
-                        <div class="form-group col-6">
+                        <div class="form-group col-md-6">
                             <label>Ruscha nomi</label>
                             <input type="text" class="form-control" value="{{blog.title_ru}}" name="title_ru">
                         </div>
-                        <div class="form-group col-6">
+                        <div class="form-group col-md-6">
                             <label>Fransuzcha nomi</label>
                             <input type="text" class="form-control" value="{{blog.title_fr}}" name="title_fr">
                         </div>
-                        <div class="form-group col-6">
+                        <div class="form-group col-md-6">
                             <label>Nemischa nomi</label>
                             <input type="text" class="form-control" value="{{blog.title_de}}" name="title_de">
                         </div>
-                        <div class="form-group col-6">
+                        <div class="form-group col-md-6">
                             <label>Ispancha nomi</label>
                             <input type="text" class="form-control" value="{{blog.title_es}}" name="title_es">
                         </div>
-                        <div class="form-group col-6">
+                        <div class="form-group col-md-6">
                             <label>Tahrirlangan sana</label>
                             <input type="text" class="form-control" value="{{blog.updated_at|date:'Y-m-d H:i'}}" readonly>
                         </div>
-                        <div class="form-group col-6">
+                        <div class="form-group col-md-6">
                             <label>Inglizcha tavsifi</label>
                             <textarea class="summernote" name="description_en">{{blog.description_en}}</textarea >
                         </div>
-                        <div class="form-group col-6">
+                        <div class="form-group col-md-6">
                             <label>Ruscha tavsifi</label>
                             <textarea class="summernote" name="description_ru">{{blog.description_ru}}</textarea >
                         </div>
-                        <div class="form-group col-6">
+                        <div class="form-group col-md-6">
                             <label>Fransuzcha tavsifi</label>
                             <textarea class="summernote" name="description_fr">{{blog.description_fr}}</textarea >
                         </div>
-                        <div class="form-group col-6">
+                        <div class="form-group col-md-6">
                             <label>Nemischa tavsifi</label>
                             <textarea class="summernote" name="description_de">{{blog.description_de}}</textarea >
                         </div>
-                        <div class="form-group col-12">
+                        <div class="form-group col-md-12">
                             <label>Ispancha tavsifi</label>
                             <textarea class="summernote" name="description_es">{{blog.description_es}}</textarea >
                         </div>
